# PerfVisy

./: CMakeLists.txt  README.md  main.cpp  source.qrc  themeloader.cpp  themeloader.h
cmake/: compiler_options.cmake  hmi_configure.cmake  misc_helper.cmake  rpath_config.cmake  version.cmake
qmlsrc/: ArrowCanvas.qml  AssetGallery.qml  HomeForm.qml  InteractiveListDelegate.qml  RecentItemDelegate.qml  RecentScreenFHC.qml  RecentScreenQuickControl.qml  main.qml
